# 35_pbix_model_extractor

./: .gitignore  README_USAGE.md  Refactor_Project.md  pyproject.toml  readme.md  readme_scope.md  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/skills/log-config-manager-usage/: SKILL.md
2_INSTRUCTIONS/: example_optimize.md
src/: __init__.py  cli.py  dependency.py  diff_engine.py  extractor.py  generator.py  openai_client.py
src/web/: __init__.py  app.py  models.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: base.html  diff_view.html  index.html  queries.html
src/web/templates/partials/: diff_result.html  query_card.html  query_list.html
tests/: test_diff_engine.py  test_extractor.py  test_generator.py  test_openai_client.py  test_web_app.py
