[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbix-model-extractor"
version = "0.1.0"
description = "Tool for extracting Power Query (M) content from PBIX files"
authors = [{name = "Your Name"}]
dependencies = [
    "pbixray>=0.1.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "diff-match-patch>=20230501",
    "httpx>=0.27.0",
]
requires-python = ">=3.11"

[project.scripts]
pbix-model-extractor = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]